js/js.translator/testData/incremental/invalidation/updateExports/lib2/l2b.8.kt
fun funA() = listOf(fun1(), fun3()).joinToString()
